--- a/calculator/index.html
+++ b/calculator/index.html
@@ -7,6 +7,49 @@
     <title>Document</title>
 </head>
 <body>
+ 
+ <main>
+<div class="container">
+   
+
+
+
+<button id="extra" class="btn">MR</button>
+<button id="extra" class="btn">MC</button>
+<button id="extra" class="btn">M-</button>
+<button id="extra" class="btn">M+</button>
+<button id="clear" class="btn">C</button>
+<button id="negatve" class="btn">+/-</button>
+<button id="operator" class="btn">/</button>
+<button id="operator" class="btn">*</button>
+<button class="btn">7</button>
+<button class="btn">8</button>
+<button class="btn">9</button>
+<button id="operator" class="btn">-</button>
+<button class="btn">4</button>
+<button class="btn">5</button>
+<button class="btn">6</button>
+<button class="btn">1</button>
+<button id="operator" class="btn">+</button>
+<button class="btn">2</button>
+<button class="btn">3</button>
+
+<button class="btn">0</button>
+<button class="btn">.</button>
+<button id="equal" class="btn">=</button>
+
+
+</div>
+ 
+
+
+
+
+
+
+
+</main>
+
     <script>src="script.js"</script>
 </body>
 </html>
