finished html and css

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,17 +9,14 @@
 <body>
  
  <main>
+<div class="input">0</div>
 <div class="container">
-   
-
-
-
 <button id="extra" class="btn">MR</button>
 <button id="extra" class="btn">MC</button>
 <button id="extra" class="btn">M-</button>
 <button id="extra" class="btn">M+</button>
 <button id="clear" class="btn">C</button>
-<button id="negatve" class="btn">+/-</button>
+<button id="negative" class="btn">+/-</button>
 <button id="operator" class="btn">/</button>
 <button id="operator" class="btn">*</button>
 <button class="btn">7</button>
@@ -29,13 +26,12 @@
 <button class="btn">4</button>
 <button class="btn">5</button>
 <button class="btn">6</button>
-<button class="btn">1</button>
 <button id="operator" class="btn">+</button>
+<button class="btn">1</button>
 <button class="btn">2</button>
 <button class="btn">3</button>
-
+<button id="period"class="btn">.</button>
 <button class="btn">0</button>
-<button class="btn">.</button>
 <button id="equal" class="btn">=</button>
 
 
